# TorDownloader

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
tests/: conftest.py  test_link_discovery_and_downloads.py  test_links_and_config.py  test_progress_store.py  test_url_output_planner.py
tor_downloader/: __init__.py  __main__.py  config_utils.py  download_runner.py  dynamic_base_pool.py  file_downloader.py  link_discovery.py  link_specs.py  mirror_planner.py  output_layout.py  progress_store.py  requirements.txt  url_utils.py
tor_downloader/utils/: __init__.py  check_tor.py  config_utils.py  download_links.py  log_management.py  logging_handlers.py
